# bayesian-statistician-plugin

./: CHANGELOG.md  LICENSE  README.md  settings.json.template
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: analysis-planner.md  critique.md  eda-analyst.md  fake-data-checker.md  model-designer.md  model-fitter.md  model-refiner.md  model-selector.md  posterior-predictive-checker.md  prior-predictive-checker.md  recovery-checker.md  report-writer.md
commands/: eda.md  run.md  setup.md
hooks/: check-ruff.sh  hooks.json
shared_utils/src/shared_utils/: fit_pipeline.py  io.py
shared_utils/tests/: conftest.py  test_io.py
shared_utils/tests/fixtures/: eight_schools_data.json  thinned_draws.npz
skills/analysis-design/: SKILL.md
skills/artifact-guidelines/: SKILL.md
skills/bayesian-model-diagnostics/: SKILL.md
skills/bayesian-model-selection/: SKILL.md
skills/bayesian-workflow/: SKILL.md  pyproject.toml
skills/convergence-diagnostics/: SKILL.md
skills/eda/: SKILL.md
skills/fake-data-simulation/: SKILL.md
skills/generative-model-design/: SKILL.md
skills/horseshoe-prior/: SKILL.md
skills/inferencedata-handling/: SKILL.md
skills/model-critique/: SKILL.md
skills/orchestration/: SKILL.md
skills/python-environment/: SKILL.md
skills/run/: SKILL.md
skills/stan/: SKILL.md
skills/stan-coding/: SKILL.md
skills/stan-ode-modeler/: SKILL.md
skills/stan/references/: horseshoe.md  (+1 more)
skills/statistical-diagnostics/: SKILL.md
skills/validation-protocol/: SKILL.md
skills/visual-predictive-checks/: SKILL.md
(+41 files in other folders)
