[project]
name = "bayesian-workflow"
version = "0.1.0"
description = "Dependencies for Bayesian statistical analysis workflow"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.22.0",
    "cmdstanpy>=1.2.5",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
